# instantCLI

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  PKGBUILD  README.md  SETTINGS_REFACTORING_SUMMARY.md  WARP.md  dmenu_replacement.md  fix-hashing.md  issues.md  justfile  next-steps-redesign.md  next-steps.md  nextsteps.md  plan.md  release-plz.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml  sync-pkgbuild.yml
desktop/: ins-dot-menu.desktop  ins-game-menu.desktop  ins-settings.desktop  ins-video-menu.desktop
packaging/: PKGBUILD
pkgbuild/ins/: .SRCINFO  PKGBUILD
plans/: aliases.md  arandr.md  archinstall.md  archlinuxfallback.md  audioprocess.md  auphonic.md  autostart.md  bettersetup.md  bluetooth.md  brightness_setting.md  configpaths.md  debugging.md  defaultapps.md  dependencies.md  depsflow.md  desktop.md  devsetup.md  distrocheck.md  double_checkout.md  drivers.md  duplicates.md  editdedup.md  encryption.md  fetchadd.md  file_support.md  filegone.md  filenames.md  filepicker.md  finished.md  fixcrash.md  fixwarnings.md  fzfvertical.md  game_prune.md  gameedit.md  games.md  gamesetup.md  hypershell.md  hyprlandscratchpad.md  ignore.md  inconsistencies.md  (+61 more)
research/: desktop.md  duct.md  frecency.md  fzf.md  privilege-escalation.md  restic.md  rustic.md  scratchpad.md  sort.md  xshell.md
scripts/: archinstall.sh  dev.sh  install.sh
src/: autostart.rs  compositor.rs  debug.rs  fzf_wrapper.rs  hyprland_ipc.rs  main.rs  menu_wrapper.rs  menu_wrapper_yazi_init.lua  preview.rs  scratchpad.rs  update.rs
src/arch/: annotations.rs  cli.rs  config.rs  disks.rs  engine.rs  execution.rs  keymaps.rs  locales.rs  logging.rs  mirrors.rs  mkinitcpio.rs  mod.rs  questions.rs  repo.rs  timezones.rs
src/assist/: commands.rs  deps.rs  execute.rs  instantmenu.rs  mod.rs  packages.rs  registry.rs  utils.rs
src/common/: audio.rs  blockdev.rs  commands.rs  config.rs  dependencies.rs  deps.rs  display_server.rs  distro.rs  format.rs  git.rs  instantmirrorlist  instantwm.rs  instantwmctl.rs  mod.rs  network.rs  pacman.rs  pacman_mirrors.rs  paths.rs  progress.rs  requirements.rs  shell.rs  systemd.rs  terminal.rs  tilde_path.rs
src/completions/: mod.rs
src/debug/: mod.rs
src/dev/: chroot.rs  clone.rs  fuzzy.rs  github.rs  install.rs  mod.rs  package.rs  setup.rs
src/doctor/: checks.rs  cli.rs  command.rs  fix.rs  mod.rs  privileges.rs  registry.rs  run.rs  ui.rs
src/dot/: commands.rs  config.rs  db.rs  dotfile.rs  dotfilerepo.rs  encryption.rs  external_metadata_tests.rs  git.rs  insignore.rs  localrepo.rs  meta.rs  mod.rs  override_config.rs  path_serde.rs  path_tests.rs  repo.rs  sources.rs  test_util.rs  types.rs  unit_manager.rs  units.rs  utils.rs
src/game/: checkpoint.rs  cli.rs  commands.rs  config.rs  edit.rs  launch_command.rs  mod.rs  setup.rs
src/launch/: cache.rs  desktop.rs  execute.rs  mod.rs  types.rs
src/menu/: all.rs  chord.rs  chord_demo.rs  client.rs  fallback.rs  mod.rs  monitoring.rs  processing.rs  protocol.rs  scratchpad_manager.rs  server.rs  slide.rs  tui.rs
src/menu_utils/: cursor.rs  file_picker.rs  fzf.rs  fzf.rs.bak  keychord.rs  mock.rs  mod.rs  path_input.rs  slider.rs  style.rs  text_input.rs  version.rs  yazi_init.lua
src/notify/: capture.rs  commands.rs  db.rs  handlers.rs  items.rs  menu.rs  mod.rs  options.rs  service.rs
src/pass/: browser.rs  menu.rs  mod.rs  operations.rs  tests.rs  totp.rs  types.rs  utils.rs
src/preview/: appearance.rs  bluetooth.rs  cache.rs  default_apps.rs  disks.rs  file.rs  game_save.rs  helpers.rs  keyboard.rs  mime.rs  mouse.rs  package.rs  timezone.rs
src/resolvething/: cli.rs  commands.rs  config.rs  conflicts.rs  duplicates.rs  menu.rs  mod.rs  utils.rs
src/restic/: error.rs  logging.rs  mod.rs  wrapper.rs
src/scratchpad/: config.rs  mod.rs  operations.rs  terminal.rs  visibility.rs
src/self_update/: mod.rs
src/settings/: actions.rs  apply.rs  category_tree.rs  commands.rs  constants.rs  context.rs  default_commands.rs  defaultapps.rs  deps.rs  doctor_integration.rs  firmware.rs  flatpak_list.rs  installable_packages.rs  installed_packages_manager.rs  language.rs  mod.rs  network.rs  package_list.rs  packages.rs  printer.rs  registry.rs  restore.rs  setting.rs  sources.rs  store.rs  systemd_list.rs  users.rs
src/setup/: commands.rs  mod.rs
src/ui/: catppuccin.rs  mod.rs  nerd_font.rs  preview.rs
src/video/: auphonic.rs  check.rs  cli.rs  commands.rs  config.rs  convert.rs  document.rs  ffmpeg.rs  markdown.rs  markdown_utils.rs  mod.rs  music.rs  nle_timeline.rs  render.rs  render_timeline.rs  setup.rs  srt.rs  stats.rs  timeline.rs  title_card.css  title_card.js  title_card.rs  titlecard.rs  transcribe.rs  transcript.rs  transcript_language.rs  utils.rs  video_planner.rs
src/wallpaper/: awww.rs  cli.rs  colored.rs  commands.rs  common.rs  config.rs  (+8 more)
systemd/: ins-notify-local.service  ins-notify.service
tests/: e2e_test.rs  helpers.sh  run_all.sh  test_dot_basic.sh  test_dot_removed_sources.sh  test_dot_reset.sh  test_game_discover.sh  test_game_manager.sh  test_game_restore_relocation.sh  test_single_file_basic.sh  test_single_file_game.sh
utils/: InstantCLI-Installer.desktop  build_appimage.sh  build_deb.sh  game_e2e_test.sh
(+464 files in other folders)
