[package]
name = "ins"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
colored = "3.0.0"
dirs = "5.0.1"
indicatif = "0.18.0"
owo-colors = "4.2.2"
rusqlite = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
shellexpand = "3.1.1"
toml = "0.9.5"
walkdir = "2.5.0"
tokio = { version = "1.0", features = ["full", "signal"] }
async-trait = "0.1"
sudo = "0.6"                # Privilege escalation via process restart
lazy_static = "1.4"         # Global registry instance
thiserror = "1.0"           # Error handling
comfy-table = "7"            # Formatted tables for doctor command output
reqwest = { version = "0.11", features = ["json"] }  # For GitHub API calls
serde_json = "1.0"             # For JSON parsing
git2 = "0.20"                 # For native git operations
duct = "1.1"                  # For non-git shell commands (makepkg, etc.)
tempfile = "3.21.0"            # For temporary files
rand = "0.8"                    # For request ID generation
xdg = "2.4"                     # For XDG directory support
ctrlc = "3.4"                   # For signal handling
fre = "0.4.1"
freedesktop-file-parser = "0.3.0"
which = "7.0"
ratatui = "0.29.0"
crossterm = "0.29.0"
base64 = "0.21.7"
dialoguer = "0.10.0"

[dev-dependencies]
tempfile = "3.21.0"
serde_json = "1.0"
