[package]
name = "ins"
version = "0.1.9"
edition = "2024"
description = "Instant CLI - command-line utilities"
license = "GPL-2.0-only"
homepage = "https://instantos.io"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = { version = "4.5.58", features = ["unstable-dynamic"] }
colored = "3.0.0"
dirs = "6.0.0"
indicatif = "0.18.0"
owo-colors = "4.2.2"
rusqlite = "0.37.0"
serde = { version = "1.0.227", features = ["derive"] }
sha2 = "0.10.9"
shellexpand = "3.1.1"
toml = "0.9.7"
walkdir = "2.5.0"
tokio = { version = "1.47.1", features = ["full", "signal"] }
async-trait = "0.1.89"
sudo = "0.6.0"                # Privilege escalation via process restart
lazy_static = "1.5.0"         # Global registry instance
thiserror = "2.0.16"           # Error handling
comfy-table = "7.2.1"            # Formatted tables for doctor command output
reqwest = { version = "0.12.23", features = ["json"] }  # For GitHub API calls
serde_json = "1.0.145"             # For JSON parsing
git2 = "0.20.2"                 # For native git operations
duct = "1.1.0"                  # For non-git shell commands (makepkg, etc.)
tempfile = "3.23.0"            # For temporary files
rand = "0.8.5"                    # For request ID generation
xdg = "3.0.0"                     # For XDG directory support
ctrlc = "3.5.0"                   # For signal handling
fre = "0.4.1"
freedesktop-file-parser = "0.3.1"
which = "8.0.0"
ratatui = "0.29.0"
crossterm = "0.29.0"
base64 = "0.22.1"
dialoguer = "0.12.0"


[dev-dependencies]
tempfile = "3.23.0"
serde_json = "1.0.145"
